--- a/vignettes/analysis.Rmd
+++ b/vignettes/analysis.Rmd
@@ -303,7 +303,7 @@ for(mode in c("ext","int")){
     loss <- frame[,names]
     loss <- round(100*loss/loss$mean,digits=1)
     loss <- loss[,!colnames(loss) %in% "mean"]
-    colnames(info) <- sapply(colnames(info),function(x) switch(x,"Ka"="$K_a$","K"="$K$","h"="$h$","alpha"="$\\alpha$","rho.x"="$\\rho_x$","rho.beta"="$\\rho_\\beta$","cor.x"="$\\color{blue}\\bar{\\rho}_{x}$","cor.beta"="$\\color{blue}\\max(\\hat{\\rho}_{\\beta})$","cor.t"="$\\color{blue}{\\bar{\\rho}_{a}}$",x))
+    colnames(info) <- sapply(colnames(info),function(x) switch(x,"Ka"="$K_a$","K"="$K$","h"="$h$","alpha"="$\\alpha$","rho.x"="$\\rho_x$","rho.beta"="$\\rho_\\beta$","cor.x"="$\\bar{\\rho}_{x}$","cor.beta"="$\\max(\\hat{\\rho}_{\\beta})$","cor.t"="$\\bar{\\rho}_{a}$",x))
     external <- "number of transferable source data sets ($K_a$), differences between source and target coefficients ($h$), dense setting with ridge regularisation ($s=50$, $\\alpha=0$) or sparse setting with lasso regularisation ($s=15$, $\\alpha=1$), family of distribution (`gaussian' or `binomial')."
     internal <- "correlation parameter for features ($\\rho_x$), correlation parameter for coefficients ($\\rho_{\\beta}$), dense setting with ridge regularisation ($\\pi=20\\%$, $\\alpha=0$) or sparse setting with lasso regularisation ($\\pi=5\\%$, $\\alpha=1$), family of distribution (`gaussian' or `binomial')."
     caption <- paste0("Testing loss in ",mode,"ernal simulation, as a percentage of the one from prediction by the mean. Settings: ",ifelse(mode=="ext",external,ifelse(mode=="int",internal,NULL))," These parameters determine (i) the average Pearson correlations among the features in the target data set ($\\bar{\\rho}_x$) and (ii) the maximum Pearson correlation between the coefficients in the target data set and the coefficients in the source data sets ($\\max(\\hat{\\rho}_{\\beta})$). Methods: regularised regression (\\texttt{glmnet}), competing transfer learning method (\\texttt{glmtrans}), proposed transfer learning method (\\texttt{transreg}) with exponential/isotonic calibration and standard/simultaneous stacking. In each setting, the colour black highlights methods that are more predictive than regularised regression without transfer learning (\\texttt{glmnet}), and an underline highlights the most predictive method. \\label{sim_",mode,"}")
