--- a/vignettes/analysis.Rmd
+++ b/vignettes/analysis.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Penalised regression with multiple sources of prior effects'
-author: "Armin Rauschenberger"
+author: "Armin Rauschenberger[![AR](https://info.orcid.org/wp-content/uploads/2019/11/orcid_16x16.png)](https://orcid.org/0000-0001-6498-4801)"
 date: "`r format(Sys.time(),'%d %B %Y')`"
 output:
   html_document: default
