--- a/vignettes/analysis.Rmd
+++ b/vignettes/analysis.Rmd
@@ -146,22 +146,27 @@ for(mode in c("ext","int")){
   
     # simulation setting
     if(mode=="ext"){
-      frame <- expand.grid(Ka=as.integer(c(1,3,5)),
+      frame <- expand.grid(seed=1:10, # trial (added line)
+                           Ka=as.integer(c(1,3,5)),
                            K=as.integer(5),
                            h=as.integer(c(5,250)),
                            alpha=as.integer(c(0,1)),
-                           family=c("gaussian","binomial"))
-      frame$seed <- rep(1:4,each=6)
+                           family=c("gaussian","binomial")
+                           )
+      #frame$seed <- rep(1:4,each=6) # original
     } else if(mode=="int"){
-      frame <- expand.grid(rho.x=c(0.95,0.99),
+      frame <- expand.grid(seed=1:10, # trial (added line)
+                           rho.x=c(0.95,0.99),
                            rho.beta=c(0.70,0.85,0.99),
                            alpha=as.integer(c(0,1)),
-                           family=c("gaussian","binomial"))
-      frame$seed <- 1:24
+                           family=c("gaussian","binomial")
+                           )
+      #frame$seed <- 1:24 # original
     }
     frame$family <- as.character(frame$family)
     frame[,c("cor.x","cor.beta","mean","glmnet","glmtrans","transreg")] <- NA
-    p <- 1000; n0 <- 100; n1 <- 10000
+    #p <- 1000; # original
+    n0 <- 100; n1 <- 10000
     n.target <- n0+n1
     foldid.ext <- rep(c(0,1),times=c(n0,n1))
     
@@ -177,18 +182,18 @@ for(mode in c("ext","int")){
         message("Using external simulation study!")
         s <- ifelse(frame$alpha[iter]==0,50,15)
         data <- glmtrans.models(family=frame$family[iter],type="all",
-                                p=p,n.target=n.target,s=s,
-                                Ka=frame$Ka[iter],K=frame$K[iter],h=frame$h[iter])
+                                p=1000,n.target=n.target,s=s,
+                                Ka=frame$Ka[iter],K=frame$K[iter],h=frame$h[iter]) # original: p=p
         target <- data$target
         source <- data$source
         beta <- cbind(sapply(data$source,function(x) x$beta),data$target$beta)
       } else if(mode=="int"){
         message("Using internal simulation study!")
         prop <- ifelse(frame$alpha[iter]==0,0.2,0.05)
-        data <- transreg:::simulate(p=p,n.target=n.target,family=frame$family[iter],
+        data <- transreg:::simulate(p=2000,n.target=n.target,family=frame$family[iter],
                                 prop=prop,rho.beta=frame$rho.beta[iter],w=0.5,
                                 rho.x=frame$rho.x[iter],k=3,exp=c(1,2,0.5),
-                                trans=c(FALSE,TRUE,TRUE))
+                                trans=c(FALSE,TRUE,TRUE)) # original: p=p
         target <- data$target
         source <- data$source
         beta <- data$beta
